[package]
name = "save_audio_stream"
version = "0.1.0"
edition = "2021"

[features]
default = ["web-frontend"]
web-frontend = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
symphonia = { version = "0.5", features = ["mp3", "aac"] }
chrono = "0.4"
httpdate = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
fdk-aac = "0.8.0"
opus = "0.3"
ogg = "0.9"
hound = "3.5"
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
bytes = "1"
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }
fs2 = "0.4"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
serde_json = "1"
serde_bytes = "0.11"
rust-embed = { version = "8", features = ["include-exclude"], optional = true }
mime_guess = { version = "2", optional = true }
